<resources>
    <string name="app_name">WineScore</string>
    <string name="search_hint">Search WineScore</string>
    <string name="title_wine_detail">Wine Detail</string>
    <string name="title_list">List</string>
    <string name="information">Information</string>
    <string name="vintage">Vintage</string>
    <string name="appellation">Appellation</string>
    <string name="color">Color</string>
    <string name="location">Location</string>
    <string name="regions">Regions</string>
    <string name="country">Country</string>
    <string name="wines">Wines</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_ratings">My Ratings</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="rating">Rating</string>
    <string name="latest">Latest</string>
    <string name="filter">Filter</string>
    <string name="filter_wines">Filter wines</string>

    <string name="pref_colorTitle">Color</string>
    <string name="pref_countryTitle">Country</string>
    <string name="pref_vintageTitle">Vintage</string>
    <string name="pref_orderingTitle">Ordering</string>

    <string name="dataload_error_message">An error occurred. Try to reload.</string>
    <string name="pref_category_filter_wines">Filter wines</string>

    <string name="array_all_value" translatable="false">_</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="profile_welcome">Welcome to WineScore!</string>
    <string name="profile_login_message">Please log in to rate and comment on wines\nand add them to your favorites.</string>
    <string name="favorites_title">Favorites</string>
    <string name="ratings_title">Ratings</string>
    <string name="comments_title">Comments</string>
    <string name="error_no_internet_connection">Error: No internet connection</string>
    <string name="error_unknown">Unknown Error…</string>
    <string name="anonymous">Anonymous</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_out">Sign out</string>
    <string name="dataload_error_retry">RETRY</string>
    <string name="my_rating">My Rating</string>
    <string name="ratings">Ratings</string>
    <string name="button_remove_rating">Remove rating</string>
    <string name="empty_data_title">The wine glass is empty!</string>
    <string name="empty_data_content">There is nothing to show here…</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="critics">Critics\n(Confidence Index)</string>
    <string name="users">Users\n</string>
    <string name="comments_add_title">Add comment</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="last_comment">Latest comment</string>
    <string name="comments_view_all">View all</string>
    <string name="comments_citation">\"%1$s\"</string>
    <string name="favorite_added">The wine has been added to your favorites.</string>
    <string name="favorite_removed">The wine has been removed from your favorites.</string>
    <string name="score">Score /100</string>
    <string name="zero">0</string>
</resources>
