<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/profile_padding">

                <ImageView
                    android:id="@+id/img_profile_picture"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:src="@drawable/ic_wine_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_displayname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/profile_welcome"
                    android:textAppearance="@style/ActionBar.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_profile_picture" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layout_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_sign_in_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/profile_padding"
                    android:text="@string/profile_login_message"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/button_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/button_sign_in" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/profile_padding"
                android:visibility="visible">

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/layout_favorites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/profile_padding">

                    <ImageView
                        android:id="@+id/favorites_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/favorites_title"
                        android:src="@drawable/ic_favorite_black_24dp"
                        android:tint="@color/colorPrimaryDark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/favorites_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/favorites_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/favorites_icon"
                        app:layout_constraintTop_toTopOf="@+id/favorites_icon" />

                    <TextView
                        android:id="@+id/favorites_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/favorites_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/favorites_icon"
                        tools:text="0" />
                </android.support.constraint.ConstraintLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/layout_ratings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/profile_padding">

                    <ImageView
                        android:id="@+id/ratings_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/ratings_title"
                        android:src="@drawable/ic_star_black_24dp"
                        android:tint="@color/colorPrimaryDark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/ratings_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/ratings_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ratings_icon"
                        app:layout_constraintTop_toTopOf="@+id/ratings_icon" />

                    <TextView
                        android:id="@+id/ratings_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/ratings_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/ratings_icon"
                        tools:text="0" />
                </android.support.constraint.ConstraintLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/layout_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/profile_padding">

                    <ImageView
                        android:id="@+id/comments_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/comments_title"
                        android:src="@drawable/ic_mode_comment_black_24dp"
                        android:tint="@color/colorPrimaryDark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/comments_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/comments_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/comments_icon"
                        app:layout_constraintTop_toTopOf="@+id/comments_icon" />

                    <TextView
                        android:id="@+id/comments_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/comments_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/comments_icon"
                        tools:text="0" />
                </android.support.constraint.ConstraintLayout>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <Button
                    android:id="@+id/button_sign_out"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_sign_out" />

            </LinearLayout>
        </LinearLayout>
</android.support.v4.widget.NestedScrollView>